fix expanded nav tray falling off screen bottom

--- a/assets/css/v2/nav.scss
+++ b/assets/css/v2/nav.scss
@@ -17,7 +17,9 @@
         height: 100vh;
 		position: fixed;
 		right: 0;
-		top: 0;
+        top: 0;
+        display: flex;
+        flex-direction: column;
 		transform: translateX(100%);
         transition: transform 0.3s cubic-bezier(.22, .61, .36, 1);
 
